# rust

./: .env.example  .gitignore  BUSINESS_LOGIC_IMPROVEMENTS.md  Cargo.toml  PR3_IMPLEMENTATION_STATUS.md  README.md
.sqlx/: query-05b824b17019f37de1ac8d53cb503be8e368ff2f21a9fb68136f51573a41430a.json  query-07dc963a1c25b12394dd89e944fadc35767da8baf8ff2234e86fe3affcdcce4b.json  query-09d055ab62549c9b927aa521909e025d6ccdc962367145fa5aaa41fa732aea25.json  query-0a059379145febec6f7ba3cca2ab9964fd5ffdd40952ad78439ae2f2a7770f75.json  query-0bd594bfc683053d476583d88d8a6d9c3efc28417c46e804f3a3357d5cc60383.json  query-110adb1f05b25a0bef227ef087f728c798fd5c7b18f6ee65f2c8d5b621b1c792.json  query-12c69500486d050871724061ba7a06d6a6c21358c9e9502a1421f60dfee51b93.json  query-155f218ba9f27e3ab7108dcd2bb5a498036bf3ddba5506215c658b6dabd2cd15.json  query-1662416cf3e0532ffb58d0cb0dab9b181ae7fc0a63d8f809905a3b5a557035e2.json  query-1c879020a9d27525c4c96788216f9ae88d0bf0251c52c70411cbaa92f1a91cef.json  query-1eb21d41365f103c245627beda51721424a35c0e086c2f62659e3df42883e1f1.json  query-1f14016d04a47e131577778687c8d318b28ecf687c84778ced911374619f367e.json  query-21cb0e1aee619a7553587d8b22846a344ea6b70fb2eee2c45dd7e2e296316b3b.json  query-28cb5b08cf5cd8654ae29e0554aa27e65e877d12de6660be920a2f745d4c2615.json  query-2b2c3799c853b500a6c553b56150d73a31b47d5deef1447a544b8b0951e716b4.json  query-2c4b18782f674f37d9ad9ff5fc6b6242aface4bea7e4c237990999bbecf74499.json  query-2d7ad4990335360da122307fe84bce854b77659dc15c8765f9dd5bdf920ffb87.json  query-2f628c5adab07b30dba40aa9b7ef90e2974aa5cb208053617951ac325c05d6b6.json  query-31faa2bec222646e754c0f42c06f62dad3ab33e55148db34e61d31dd0dcadd61.json  query-3b38d53c86d633fa1546730b51a8925a001e126fcf2c6443d4981f5c96029520.json  query-3c1bff2ed8b8628cbf495cf8e546a322ee8ea5b85d475705b558be079cf19c5b.json  query-3d1ac30a49f8ad34e6433d8c8564d49cdebe89db06c9231af55aa6ed48908c7c.json  query-4137d8b2d35f58fc0b452fc9eee4d643a11a36f12ab68a4324887a7d77d9ec2f.json  query-42629ecbc4ab5207eaeb95590e0fe34975b3f82c6b035982b37d0717fdb64f38.json  query-445d1bd084a2e886e9800713f93cc553ac95cd31436c7feda04b763bd9978d63.json  query-4488419bd74c303519957328fff35fcf21b2d1ba92a835a63b44b3e5cc38aa23.json  query-4fefb787de3ed1f514f7465080ae51206c5a87883c8033dbb5a47082bb5cad9b.json  query-50dfbb557f9760c3dfcb6898a113eb95646d861e491a5a635bef71ef480d595c.json  query-53ea247e86780f804929c17f74cbe9a30ec5ab2a2373db1d84f521c3fca5fa37.json  query-54b3b80a8471d4ccc6af02be5d658c983a43c27faf9d5567103f179197067a15.json  query-550a62191e07e314e8023bc018dba078fd45a7efdc441b593f76d18c4654429c.json  query-55ffdb3bf3843504aa2a96244d8149a60e715b3473c94eba33adfebe358e691f.json  query-573146654f0a1d13856733ec0b95673562804d78aa81cdc2bdd705452ac081f4.json  query-57564b092eee7584228ea8621e95748e56cb9c8e0cba7bccabdb016ace84349d.json  query-5ab48984eba91472278410e00ec9299215d54107f17ca47ff04be179af182bce.json  query-5b1a9dcf53d698df56559508617db5bee06edbe1be1d94917c6416782ce2ec3e.json  query-607ac32fd0d6da74cc7dc4db273c08905ba0f760c4089986f90df99490476c17.json  query-6c15a8ba8e72d7cb49d38923a012dcf96c7dce65acc028c8a2a0f7b14d61b566.json  query-73dea747955150303a696e3007202731e1bad9e66012c9582db4d176ec2019db.json  query-76d7731a00da027821a08d34c5a6c866cd7d8b2f16106fd614e424b8445f8361.json  (+48 more)
migrations/: 001_initial_schema.sql  002_advanced_features.sql
src/: app_state.rs  main.rs  main_complex.rs  main_demo.rs  main_extended.rs  main_final.rs  main_secure.rs  user_handlers_secure.rs
src/config/: mod.rs
src/handlers/: analytics_handlers.rs  case_handlers.rs  document_handlers.rs  health_handlers.rs  mod.rs  notification_handlers.rs  search_handlers.rs  team_handlers.rs  user_handlers.rs  workflow_handlers.rs
(+17 files in other folders)
